--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ mkl-service==2.4.0
 nbclient==0.7.4
 nbformat==5.8.0
 nest-asyncio==1.6.0
-numpy==1.21.6
+numpy @ file:///opt/conda/conda-bld/numpy_and_numpy_base_1653915516269/work
 packaging==24.0
 pickle-mixin==1.0.2
 pkgutil_resolve_name==1.3.10
