--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,12 @@ jupyter_client==7.4.9
 jupyter_core==4.12.0
 MarkupSafe==2.1.5
 mkl-fft==1.3.1
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626179032232/work
+mkl-random==1.2.1
 mkl-service==2.4.0
 nbclient==0.7.4
 nbformat==5.8.0
 nest-asyncio==1.6.0
-numpy @ file:///opt/conda/conda-bld/numpy_and_numpy_base_1653915516269/work
+numpy==1.21.6
 packaging==24.0
 pickle-mixin==1.0.2
 pkgutil_resolve_name==1.3.10
@@ -28,8 +28,7 @@ pyrsistent==0.19.3
 python-dateutil==2.9.0.post0
 pyzmq==26.0.3
 scikit-learn==1.0.2
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1637806658031/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+scipy==1.7.3
 threadpoolctl==3.1.0
 tornado==6.2
 traitlets==5.9.0
