--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,25 @@
-attrs==23.2.0
+blinker==1.8.2
 certifi==2024.7.4
 click==8.1.7
-entrypoints==0.4
-fastjsonschema==2.20.0
-Flask==2.2.5
-gunicorn==22.0.0
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-itsdangerous==2.1.2
+contourpy==1.2.1
+cycler==0.12.1
+Flask==3.0.3
+fonttools==4.53.1
+itsdangerous==2.2.0
 Jinja2==3.1.4
-joblib==1.3.2
-jsonschema==4.17.3
-jupyter_client==7.4.9
-jupyter_core==4.12.0
+joblib==1.4.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
-mkl-fft==1.3.7
-mkl-random==1.2.4
-mkl-service==2.4.1
-nbclient==0.7.4
-nbformat==5.8.0
-nest-asyncio==1.6.0
-numpy==1.26.4
-packaging==24.0
-pickle-mixin==1.0.2
-pkgutil_resolve_name==1.3.10
-pyrsistent==0.19.3
+matplotlib==3.9.1
+numpy==2.0.1
+packaging==24.1
+pillow==10.4.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pyzmq==26.0.3
-scikit-learn==1.0.2
-scipy==1.7.3
-threadpoolctl==3.1.0
-tornado==6.2
-traitlets==5.9.0
-typing_extensions==4.7.1
-Werkzeug==2.2.3
-zipp==3.15.0
+scikit-learn==1.5.1
+scipy==1.14.0
+setuptools==70.3.0
+six==1.16.0
+threadpoolctl==3.5.0
+Werkzeug==3.0.3
+wheel==0.43.0
